...
    }
    
//    func initCoreDataDummyData() {
//        if let coreDataStack = coreDataStack {
//            let task = Task(context: coreDataStack.managedContext)
//            task.tags = ["No tag"]
//            task.mainTag = "Done"
//            task.title = "HEllo title"
//            task.taskDescription = "MY NEW TASK"
//            if let project = currentProject,
//               let tasks = project.tasks?.mutableCopy() as? NSMutableOrderedSet {
//                tasks.add(task)
//                project.tasks = tasks
...
    }
   
    
    fileprivate func addButtonInit() {
        view.addSubview(addButton)
        addButton.anchor(top: nil, leading: view.leadingAnchor, bottom: view.safeAreaLayoutGuide.bottomAnchor, trailing: view.trailingAnchor, padding: .init(top: 0, left: 16, bottom: 0, right: 16),size: CGSize(width: 0, height: 60))
        addButton.setTitle("+ Create card", for: .normal)
        addButton.layer.cornerRadius = 10
        addButton.backgroundColor = .blue
        addButton.addTarget(self, action: #selector(addNewCardButton), for: .touchUpInside)
    }
    
    
...
