...
    weak var refreshDelegate: RefreshTagsDelegate?
    
    lazy var viewModel = CardAddTagsViewModel()
    
    let tagsNameTextField: CustomTextField = {
       let tf = CustomTextField(padding: 24)
        tf.placeholder = "Enter tag name"
        tf.addTarget(self, action: #selector(handleTextChange), for: .editingChanged)
        return tf
    }()
    
    var refreshTags: ((String) -> ())?
    var taskDetail: Task?
...
       
        
    }
    
    fileprivate func backButtonInit() {
        backButton.centerInBottom()
        backButton.setTitle("Back", for: .normal)
        backButton.setTitleColor(.black, for: .normal)
        backButton.backgroundColor = .blue
        backButton.addTarget(self, action: #selector(goBack), for: .touchUpInside)
    }
    
    //View model?
...
